--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,194 +1,184 @@
-// .backdrop {
-//   position: fixed;
-//   top: 0;
-//   left: 0;
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opacity $time-function, visibility $time-function;
+}
+.backdrop--is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.backdrop__modal {
+  &--is-hidden {
+    transform: translate(-50%, 50%) scale(1.2);
+  }
+}
+.modal {
+  padding: 40px;
 
-//   width: 100%;
-//   height: 100%;
-//   background-color: rgba(0, 0, 0, 0.2);
+  position: absolute;
+  top: 50%;
+  left: 50%;
 
-//   opacity: 1;
+  min-width: 528px;
+  min-height: 581px;
 
-//   transition: opacity var(--time-function), visibility var(--time-function);
-// }
+  background-color: $bg-white-color;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
 
-// .backdrop.is-hidden {
-//   opacity: 0;
-//   visibility: hidden;
-//   pointer-events: none;
-// }
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform $time-function;
+  &__title {
+    display: block;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    margin-bottom: 12px;
+    color: $title-text-color;
+  }
 
-// .modal {
-//   padding: 40px;
+  &__button {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 8px;
+    right: 8px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: $bg-white-color;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+  }
 
-//   position: absolute;
-//   top: 50%;
-//   left: 50%;
+  &__icon-close {
+    width: 18px;
+    height: 18px;
+    fill: $black-text-color;
+    transition: fill $time-function;
+  }
+  .modal-btn:hover .icon-close,
+  .modal-btn:focus .icon-close {
+    fill: $accent-color;
+  }
+}
+.form {
+  width: 448px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  text-align: center;
 
-//   min-width: 528px;
-//   min-height: 581px;
+  &__label {
+    display: block;
+    text-align: left;
+    margin-bottom: 4px;
+  }
 
-//   background-color: var(--bg-white-color);
-//   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-//     0px 2px 1px rgba(0, 0, 0, 0.2);
-//   border-radius: 4px;
+  &__icon {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+    width: 18px;
+    height: 18px;
+    transition: fill $time-function;
+  }
 
-//   transform: translate(-50%, -50%) scale(1);
-//   transition: transform var(--time-function);
-// }
+  &__contract-text {
+    position: relative;
+    display: block;
 
-// .backdrop.is-hidden .modal {
-//   transform: translate(-50%, 50%) scale(1.2);
-// }
+    font-size: 14px;
+    line-height: 1.71;
+    margin-bottom: 30px;
+  }
 
-// .modal-btn {
-//   position: absolute;
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   top: 8px;
-//   right: 8px;
-//   width: 30px;
-//   height: 30px;
-//   border-radius: 50%;
-//   background-color: var(--bg-white-color);
-//   border: 1px solid rgba(0, 0, 0, 0.1);
-//   cursor: pointer;
-// }
-// .icon-close {
-//   width: 18px;
-//   height: 18px;
-//   fill: var(--black-text-color);
-//   transition: fill var(--time-function);
-// }
-// .modal-btn:hover .icon-close,
-// .modal-btn:focus .icon-close {
-//   fill: var(--accent-color);
-// }
+  &__contract-link {
+    color: $accent-color;
+    text-decoration: underline;
+  }
 
-// /* ------------------------main form-------------------- */
+  &__icon-check {
+    position: absolute;
+    display: inline-block;
+    top: 50%;
+    left: 12px;
+    transform: translateY(-50%);
+    width: 16px;
+    height: 15px;
+    fill: white;
+    border: 2px solid $title-text-color;
+    border-radius: 2px;
+    transition: color $time-function, background-color $time-function;
+  }
 
-// .modal-title {
-//   display: block;
-//   font-weight: 700;
-//   font-size: 20px;
-//   line-height: 1.15;
-//   text-align: center;
-//   margin-bottom: 12px;
-//   color: var(--title-text-color);
-// }
-// .main-form {
-//   width: 448px;
-//   font-weight: 400;
-//   font-size: 12px;
-//   line-height: 14px;
-//   letter-spacing: 0.01em;
-//   text-align: center;
-// }
+}
+.form__textarea-input {
+  width: 100%;
+  height: 120px;
+  resize: none;
+  padding: 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  color: inherit;
+  margin-bottom: 20px;
 
-// .form-field {
-//   position: relative;
-//   display: block;
-//   margin-bottom: 10px;
-// }
-// .form-input {
-//   width: 100%;
-//   font: inherit;
-//   padding-top: 11px;
-//   padding-bottom: 11px;
-//   padding-left: 42px;
-//   border: 1px solid rgba(33, 33, 33, 0.2);
-//   border-radius: 4px;
-//   color: inherit;
+  transition: border $time-function;
+  &::placeholder {
+    line-height: 1.14;
+    color: rgba(117, 117, 117, 0.5);
+    letter-spacing: 0.01;
+  }
+  &:focus {
+    outline: none;
+  }
+  &:focus-within {
+    border: 1px solid $accent-color;
+  }
+}
+.form__field {
+  position: relative;
+  display: block;
+  margin-bottom: 10px;
+  &:focus-within > .icon-form {
+    fill: $accent-color;
+  }
+}
+.form__input {
+  width: 100%;
+  font: inherit;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  padding-left: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  color: inherit;
 
-//   transition: border var(--time-function);
-// }
-
-// .textarea-input {
-//   width: 100%;
-//   height: 120px;
-//   resize: none;
-//   padding: 12px 16px;
-//   border: 1px solid rgba(33, 33, 33, 0.2);
-//   border-radius: 4px;
-//   color: inherit;
-//   margin-bottom: 20px;
-
-//   transition: border var(--time-function);
-// }
-
-// .textarea-input::placeholder {
-//   line-height: 1.14;
-//   color: rgba(117, 117, 117, 0.5);
-//   letter-spacing: 0.01;
-// }
-// .textarea-input:focus,
-// .form-input:focus {
-//   outline: none;
-// }
-
-// .contract-text {
-//   position: relative;
-//   display: block;
-
-//   font-size: 14px;
-//   line-height: 1.71;
-//   margin-bottom: 30px;
-// }
-
-// .contract-link {
-//   color: var(--accent-color);
-//   text-decoration: underline;
-// }
-
-// .form-label {
-//   display: block;
-//   text-align: left;
-//   margin-bottom: 4px;
-// }
-// .icon-form {
-//   position: absolute;
-//   top: 50%;
-//   left: 12px;
-//   width: 18px;
-//   height: 18px;
-//   transition: fill var(--time-function);
-// }
-
-// .form-field:focus-within > .icon-form {
-//   fill: var(--accent-color);
-// }
-// .form-input:focus-within {
-//   border: 1px solid var(--accent-color);
-// }
-// .textarea-input:focus-within {
-//   border: 1px solid var(--accent-color);
-// }
-// /* .checkbox {
-//   -webkit-appearance: none;
-//   -moz-appearance: none;
-//   appearance: none;
-//   position: absolute;
-// } */
-
-// .icon-check {
-//   position: absolute;
-//   display: inline-block;
-//   top: 50%;
-//   left: 12px;
-//   transform: translateY(-50%);
-//   width: 16px;
-//   height: 15px;
-//   fill: white;
-//   border: 2px solid var(--title-text-color);
-//   border-radius: 2px;
-//   transition: color var(--time-function), background-color var(--time-function);
-// }
-
-// .checkbox:checked + .icon-check {
-//   background-image: url(../images/icon-check.svg);
-//   background-size: contain;
-//   background-origin: border-box;
-//   border-color: var(--accent-color);
-//   background-color: var(--accent-color);
-// }
+  transition: border $time-function;
+  &:focus {
+    outline: none;
+  }
+  &:focus-within {
+    border: 1px solid $accent-color;
+  }
+}
+.form__checkbox {
+  @extend %visually-hidden;
+  &:checked + .icon-check {
+    background-image: url(../images/icon-check.svg);
+    background-size: contain;
+    background-origin: border-box;
+    border-color: $accent-color;
+    background-color: $accent-color;
+  }
+}
