--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -4,6 +4,8 @@
 @import './base-settings/normalize';
 @import './components/body';
 @import './components/logo';
+@import './components/button';
 @import './components/page-header';
-@import './components/work-examples';
+@import './components/socials';
 @import './components/page-footer';
+@import './components/work-examples';
