--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -54,8 +54,7 @@
       color: $accent-color;
     }
   }
-  &__link--white {
-  }
+
 }
 .social {
   &__list {
@@ -89,7 +88,7 @@
     width: 100%;
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
-    border-radius: 4px;
+    border-radius: $borderRadius;
     box-shadow: (0px 4px 4px rgba(0, 0, 0, 0.15));
     background-color: transparent;
     padding-top: 15px;
