--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -79,6 +79,10 @@
   line-height: 14px;
   letter-spacing: 0.01em;
   text-align: center;
+  
+    &__button {
+      padding: 10px 52px;
+    }
 
   &__label {
     display: block;
@@ -107,7 +111,7 @@
   &__contract-link {
     color: $accent-color;
     text-decoration: underline;
-    
+
   }
 }
 .form__textarea-input {
