--- a/css/main.css
+++ b/css/main.css
@@ -322,7 +322,7 @@ img {
   background-color: #ffffff;
   z-index: 1;
 }
-.page-header_nav {
+.page-header__nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
