--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -352,7 +352,7 @@ img {
   background-color: #ffffff;
   z-index: 1;
 }
-.page-header_nav {
+.page-header__nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
