--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -638,7 +638,7 @@ img {
   gap: 8px;
 }
 
-.button__filter {
+.work-examples__button {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -660,7 +660,7 @@ img {
   color: #212121;
   background-color: #f5f4fa;
 }
-.button__filter:hover, .button__filter:focus {
+.work-examples__button:hover, .work-examples__button:focus {
   color: #ffffff;
   background-color: #2196f3;
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
