--- a/sass/components/_work-examples.scss
+++ b/sass/components/_work-examples.scss
@@ -17,7 +17,7 @@
   }
 }
 
-.button__filter {
+.work-examples__button {
   @include transition(color);
   @include transition(background-color);
   @include transition(box-shadow);
